export const snapshot = {};

snapshot[`nu / linux / find (redirect) 1`] = `
\`zsh --no-rcs -c r#'REQ_URL_SH='http://x/sh/zsh/script/find?sysOsPlat=linux'

eval "\$( curl --fail-with-body --location --no-progress-meter --url "\${REQ_URL_SH}" )"

'#\`
`;

snapshot[`nu / winnt / find (redirect) 1`] = `
\`pwsh -noprofile -c r#'\$REQ_URL_SH = 'http://x/sh/pwsh/script/find?sysOsPlat=winnt'

iex "\$( irm -ErrorAction Stop -ProgressAction SilentlyContinue -Uri "\${REQ_URL_SH}" )"

'#\`
`;

snapshot[`pwsh / winnt / find 1`] = `
\`\$REQ_URL_CFG = 'http://x/cfg'

\$REQ_URL_SH = 'http://x/sh/pwsh/script/find?sysOsPlat=winnt'

function opPrint {
  if (\$SUCCINCT) {
    return
  }
  [Console]::WriteLine(\$(\$args -join ' '))
}

function opPrintErr {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::Error.WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'red'
  [Console]::Error.WriteLine(\$(\$args -join ' '))
  [Console]::ResetColor()
}

function opPrintSucc {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'green'
  [Console]::WriteLine(\$(\$args -join ' '))
  [Console]::ResetColor()
}

function opPrintWarn {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'yellow'
  [Console]::WriteLine(\$(\$args -join ' '))
  [Console]::ResetColor()
}

function opPrintInfo {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'blue'
  [Console]::WriteLine(\$(\$args -join ' '))
  [Console]::ResetColor()
}

function opPrintCmd {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'magenta'
  [Console]::Write(\$args[0])
  [Console]::ResetColor()
  if (\$args.Length -gt 1) {
    [Console]::Write(' ')
    [Console]::ForegroundColor = 'cyan'
    [Console]::WriteLine(\$(\$(\$args | Select-Object -Skip 1) -join ' '))
    [Console]::ResetColor()
  }
}

function opRunCmd {
  iex "\$(\$args -join ' ')"
}

function opPrintRunCmd {
  opPrintCmd @args
  opRunCmd @args
}

function opPrintMaybeRunCmd {
  opPrintCmd @args
  if (-not \$NOOP) {
    opRunCmd @args
  }
}


\$SH_VERS_MAJOR = 7

\$SH_VERS_MINOR = 5

& {
  \$major = \$SH_VERS_MAJOR -as [int]
  \$minor = \$SH_VERS_MINOR -as [int]

  if (\$PSVersionTable.PSVersion.Major -lt \$major -or \$PSVersionTable.PSVersion.Minor -lt \$minor) {
    opPrintErr "pwsh must be >= '\${major}.\${minor}' .. found '\$(\$PSVersionTable.PSVersion)' .. aborting"
    exit 1
  }
}


\$REQ_ORIG = 'http://x'

\$SYS_OS_PLAT = 'winnt'

\$REQ_PATH = '/sh/pwsh/script/find'

\$REQ_SRCH = '?sysOsPlat=winnt'

& {
  \$yn = ''
  if (\$YES) {
    \$yn = 'y'
  } else {
    \$yn = Read-Host "? use script [y, [n]]"
  }
  if (\$yn -ne 'n') {
opPrint 'install'
opPrint '  llama'
opPrint 'repair'
opPrint '  gpu'
opPrint 'setup'
opPrint '  clock, fs, rust, ssh-server, webdav, windows-terminal, wsl'
  }
}
\`
`;

snapshot[`zsh / darwin / find 1`] = `
\`REQ_URL_CFG='http://x/cfg'

REQ_URL_SH='http://x/sh/zsh/script/find?sysOsPlat=darwin'

function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}


SH_VERS_MAJOR=5

SH_VERS_MINOR=9

function () {
  local major=\$SH_VERS_MAJOR
  local minor=\$SH_VERS_MINOR

  autoload is-at-least
  if ! is-at-least "\${major}.\${minor}"; then
    opPrintErr "zsh must be >= '\${major}.\${minor}' .. found '\${ZSH_VERSION}' .. aborting"
    exit 1
  fi
}


REQ_ORIG='http://x'

SYS_OS_PLAT='darwin'

REQ_PATH='/sh/zsh/script/find'

REQ_SRCH='?sysOsPlat=darwin'

function () {
  local yn=''
  if [[ \$YES ]]; then
    yn='y'
  else
    read "yn?? use script [y, [n]]: "
  fi
  if [[ \$yn != 'n' ]]; then
opPrint 'install'
opPrint '  font-nerd'
opPrint 'repair'
opPrint '  brew, copyq'
opPrint 'setup'
opPrint '  iterm, rust'
  fi
}
\`
`;

snapshot[`zsh / linux / find 1`] = `
\`REQ_URL_CFG='http://x/cfg'

REQ_URL_SH='http://x/sh/zsh/script/find?sysOsPlat=linux'

function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}


SH_VERS_MAJOR=5

SH_VERS_MINOR=9

function () {
  local major=\$SH_VERS_MAJOR
  local minor=\$SH_VERS_MINOR

  autoload is-at-least
  if ! is-at-least "\${major}.\${minor}"; then
    opPrintErr "zsh must be >= '\${major}.\${minor}' .. found '\${ZSH_VERSION}' .. aborting"
    exit 1
  fi
}


REQ_ORIG='http://x'

SYS_OS_PLAT='linux'

REQ_PATH='/sh/zsh/script/find'

REQ_SRCH='?sysOsPlat=linux'

function () {
  local yn=''
  if [[ \$YES ]]; then
    yn='y'
  else
    read "yn?? use script [y, [n]]: "
  fi
  if [[ \$yn != 'n' ]]; then
opPrint 'install'
opPrint '  font-nerd'
opPrint 'setup'
opPrint '  docker, lxc, podman, rust'
  fi
}
\`
`;

snapshot[`zsh / linux / find (install filter) 1`] = `
\`REQ_URL_CFG='http://x/cfg'

REQ_URL_SH='http://x/sh/zsh/script/find/install?sysOsPlat=linux'

function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}


SH_VERS_MAJOR=5

SH_VERS_MINOR=9

function () {
  local major=\$SH_VERS_MAJOR
  local minor=\$SH_VERS_MINOR

  autoload is-at-least
  if ! is-at-least "\${major}.\${minor}"; then
    opPrintErr "zsh must be >= '\${major}.\${minor}' .. found '\${ZSH_VERSION}' .. aborting"
    exit 1
  fi
}


REQ_ORIG='http://x'

SYS_OS_PLAT='linux'

REQ_PATH='/sh/zsh/script/find/install'

REQ_SRCH='?sysOsPlat=linux'

SCRIPT_FIND_PARTS='install'

function () {
  local yn=''
  if [[ \$YES ]]; then
    yn='y'
  else
    read "yn?? use script [y, [n]]: "
  fi
  if [[ \$yn != 'n' ]]; then
opPrint 'install'
opPrint '  font-nerd'
  fi
}
\`
`;
